# git-repo

./: .gitignore  README.md  desafio.ipynb  desafio.py  desafio_part2.ipynb  important-file.md  pyproject.toml  pytorch.ipynb  stock-price-prediction-using-xgboost-prophet-arima.ipynb  stock-price-prediction-using-xgboost.ipynb  training.ipynb  training_perceptron&adaline_algorithms.ipynb
Books/: 17 Pandas Trick I wish I knew before(As a Data Scientist) _ Towards AI.html
Books/17 Pandas Trick I wish I knew before(As a Data Scientist) _ Towards AI_files/: 1100.js.transferir
Data/: result.csv  session_results_labelled.csv  session_results_unlabelled.csv
Tests/: test_desafio.py
XGBoost/: XGBoost.ipynb
ch02/: ch02.ipynb
ch03/: ch03.ipynb
ch04/: ch04.ipynb
ch05/: ch05.ipynb
ch06/: ch06.ipynb
ch07/: ch07.ipynb
ch08/: ch08.ipynb
ch09/: ch09.ipynb
ch10/: ch10.ipynb
ch12/: ch12_part1.ipynb  ch12_part2.ipynb
ch12/.ipynb_checkpoints/: ch12_part1-checkpoint.ipynb
ch13/: ch13_part1.ipynb  ch13_part2.ipynb  ch13_part3_lightning.ipynb  ch13_part4_ignite.ipynb
ch14/: ch14_part1.ipynb  ch14_part2.ipynb
ch15/: ch15_part1.ipynb  ch15_part2.ipynb  ch15_part3.ipynb
ch16/: ch16-part3-bert.ipynb
ch17/: ch17_part2.ipynb
ch18/: ch18_part2.ipynb
