[tool.poetry]
name = "ml-with-pytorch-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.0"
super-gradients = "^3.7.1"
numpy = "1.23"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
torch = {version = "^2.3.1+cu118", source = "pytorch-gpu"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
